--- a/Festival-App/Festival-App/Platform/XIBs/TimelineTableViewCell.xib
+++ b/Festival-App/Festival-App/Platform/XIBs/TimelineTableViewCell.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,18 +31,12 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aFP-zW-cVP" customClass="CircleImage" customModule="Festival_App" customModuleProvider="target">
                         <rect key="frame" x="26" y="19" width="80" height="80"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="80" id="Zdf-dn-g2k"/>
                             <constraint firstAttribute="width" constant="80" id="eOl-0L-I2m"/>
-                            <constraint firstAttribute="width" secondItem="aFP-zW-cVP" secondAttribute="height" multiplier="1:1" id="vtC-tS-V4s"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWm-f0-Lj3">
-                        <rect key="frame" x="161" y="76.5" width="198" height="42.5"/>
-                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="22"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QbF-Da-gLm">
-                        <rect key="frame" x="241" y="29" width="30" height="30"/>
+                        <rect key="frame" x="241" y="38" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="DFk-P5-3g4"/>
                             <constraint firstAttribute="height" constant="30" id="eV4-9V-JLd"/>
@@ -53,11 +46,17 @@
                             <action selector="onAddPressed:" destination="mx5-YM-BCr" eventType="touchUpInside" id="L0x-em-tHP"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWm-f0-Lj3">
+                        <rect key="frame" x="161" y="76" width="198" height="42.5"/>
+                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="22"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="LWm-f0-Lj3" firstAttribute="leading" secondItem="aFP-zW-cVP" secondAttribute="trailing" constant="55" id="C6E-Yg-n1d"/>
                     <constraint firstItem="LWm-f0-Lj3" firstAttribute="top" secondItem="4Od-hl-ENS" secondAttribute="bottom" id="Gm9-KX-fDV"/>
-                    <constraint firstItem="QbF-Da-gLm" firstAttribute="top" secondItem="HxZ-h8-hOq" secondAttribute="topMargin" constant="18" id="JHo-Wx-FoX"/>
+                    <constraint firstItem="QbF-Da-gLm" firstAttribute="top" secondItem="HxZ-h8-hOq" secondAttribute="topMargin" constant="27" id="JHo-Wx-FoX"/>
                     <constraint firstItem="LWm-f0-Lj3" firstAttribute="trailing" secondItem="HxZ-h8-hOq" secondAttribute="trailingMargin" id="cCo-hF-VaH"/>
                     <constraint firstItem="aFP-zW-cVP" firstAttribute="leading" secondItem="HxZ-h8-hOq" secondAttribute="leadingMargin" constant="10" id="cLw-Qc-bz7"/>
                     <constraint firstAttribute="bottomMargin" secondItem="aFP-zW-cVP" secondAttribute="bottom" constant="30" id="dN6-hL-AyS"/>
